--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose-timestamp": "^0.6.0",
     "mongoose-unique-validator": "^2.0.1",
     "password-generator": "^2.2.0",
+    "simple-git": "^1.100.0",
     "validator": "^10.7.1",
     "winston": "^3.0.0"
   }
