--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "express": "^4.16.3",
     "express-brute": "^1.0.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-jwt": "^5.3.1",
+    "express-unless": "^0.5.0",
     "i18n": "^0.8.3",
-    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.2.13",
+    "mongoose": "^5.3.0",
     "mongoose-bcrypt": "^1.6.0",
     "mongoose-string-query": "^0.2.5",
     "mongoose-timestamp": "^0.6.0",
-    "mongoose-unique-validator": "^2.0.1",
+    "mongoose-unique-validator": "^2.0.2",
     "password-generator": "^2.2.0",
-    "simple-git": "^1.100.0",
-    "validator": "^10.7.1",
-    "winston": "^3.0.0"
+    "simple-git": "^1.103.0",
+    "uuid": "^3.3.2",
+    "validator": "^10.8.0",
+    "winston": "^3.1.0"
   }
 }
