--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "express-brute": "^1.0.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.0.0",
     "express-unless": "^0.5.0",
     "i18n": "^0.8.3",
     "moment": "^2.22.2",
