--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.0.0",
     "express-unless": "^0.5.0",
+    "file-type": "^10.1.0",
     "i18n": "^0.8.3",
     "moment": "^2.22.2",
     "mongoose": "^5.3.0",
@@ -30,6 +31,7 @@
     "mongoose-timestamp": "^0.6.0",
     "mongoose-unique-validator": "^2.0.2",
     "password-generator": "^2.2.0",
+    "sharp": "^0.21.0",
     "simple-git": "^1.103.0",
     "uuid": "^3.3.2",
     "validator": "^10.8.0",
